@@ -2,7 +2,8 @@ List of features / changes made / release notes, in reverse chronological order.
 If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).
 
 Master, using release name V 2.4.0 (1/7/25)
-
+* PR614: Added support for sccache in github actions.
+  Caching cmake dependencies so to avoid downloading fftw, xsimd, etc. every time.
 * fully removed chkbnds option (opts and spreadopts) (Barnett)
 * classic GNU makefile settings make.inc.* tidied to make-platforms/ (Barnett)
 * unified separate-dim arrays (eg X,Y,Z->XYZ), simplifiying core (Reinecke #592)
